# franka-chess-tournament

./: README.md  main.py  pyproject.toml  robot_performance.db
Open_Chess/3MF/: Chess board - Bottom (6).3mf  Chess board - Bottom V2.3mf  Chess board - Chess Board (9).3mf  Chess board - V2.3mf  Piece - Bishop.3mf  Piece - King.3mf  Piece - Knight.3mf  Piece - Pawn.3mf  Piece - Queen.3mf  Piece - Rook.3mf
Open_Chess/Meshes/: King.stl  Rook.stl
Open_Chess/urdfs/: pawn.urdf
assets/meshes/: Bishops.stl  Full Chess Piece Set.stl  Knight.stl  Pawn.stl  Queen.stl
assets/urdfs/: bishop.urdf  bishop_b.urdf  chess_board.urdf  khight.urdf  king.urdf  king_b.urdf  knight.urdf  knight_b.urdf  pawn.urdf  pawn_b.urdf  queen.urdf  queen_b.urdf  rook.urdf  rook_b.urdf
code_reviews/: main_function.md
configs/: config.json  config.py  logger_config.py
docs/: ompl.md  robot_control_DP.md
learnings/: ompl_demo.py  ompl_demo_chatgpt.py  ompl_gemini.py
simulation/: builder.py  chess_engine.py  coordinator.py  game_logic.py  perception.py  robot_controller.py  special_moves.py
simulation/motion_planners/: base_planner.py  ik_planner.py  ompl_planner.py
tests/: test_capturing_pieces.py  test_castling.py  test_piece_action.py
ui/: app.py  database_setup.py  models.py  schemas.py
utils/: envirement_builder.py  simulation.py
