[project]
name = "franka-chess-tournament"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "ompl>=1.7.0",
    "pybullet>=3.2.7",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-chess>=1.999",
    "scipy>=1.16.2",
    "stockfish>=3.28.0",
]
